# ultra

./: LICENSE  Setup.hs  req  req.txt  ul.cabal  update-bin
Ultra/: Converters.hs  Interval.hs  JSONcgi.hs  Main.hs  PredictionExts.hs  Races.hs  Tests.hs  Ultra.hs
html/: index.html  pclient.js
site/: index.html  pclient.js
src/: Converters.hs  Interval.hs  JsonInput.hs  Main.hs  PredictionExts.hs  Races.hs  Tests.hs
